# telos

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: architecture.md
docs/superpowers/plans/: 2026-04-15-cawa-reference-implementation.md  2026-04-16-remaining-features.md  2026-04-16-telos-product-phase1.md
docs/superpowers/specs/: 2026-04-15-cawa-reference-implementation-design.md  2026-04-16-remaining-features-design.md  2026-04-16-telos-product-phase1-design.md
examples/: child_road.py  coffee_cup.py  learned_structure.py  nlu_demo.py  novel_entity.py  perception_demo.py  salt_request.py  telos_product_demo.py
src/cawa/: active_inference.py  causal_graph.py  physics.py  theory_of_mind.py  world.py
src/telos/: __init__.py  active_inference.py  agent.py  cli.py  mcp_server.py  nlu.py  perception.py  physics.py  structure_learner.py  theory_of_mind.py  world.py
src/telos/code_parser/: __init__.py  graph_builder.py  parser.py  store.py
src/telos/code_parser/languages/: __init__.py  go.py  java.py  javascript.py  python.py  rust.py  typescript.py
src/telos/history/: __init__.py  developer_model.py  fix_evaluator.py  git_learner.py
src/telos/impact/: __init__.py  analyzer.py  counterfactual.py  reporter.py
src/telos/memory/: __init__.py  cross_session_learner.py  event_graph.py  project_memory.py
tests/: test_active_inference.py  test_agent.py  test_causal_graph.py  test_cli.py  test_examples.py  test_mcp_server.py  test_nlu.py  test_perception.py  test_physics.py  test_structure_learner.py  test_theory_of_mind.py  test_world.py
tests/test_code_parser/: test_graph_builder.py  test_parser.py  test_store.py
tests/test_code_parser/test_languages/: test_go.py  test_java.py  test_javascript.py  test_python.py  test_rust.py  test_typescript.py
tests/test_history/: test_developer_model.py  test_fix_evaluator.py  test_git_learner.py
tests/test_impact/: test_analyzer.py  test_counterfactual.py  test_reporter.py
tests/test_memory/: test_cross_session_learner.py  test_event_graph.py  test_project_memory.py
